<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">G53IDS</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_sync">Sync</string>
    <string name="action_about">About</string>
    <string name="action_done">Done</string>
    <string name="title_activity_search">Search</string>
    <string name="search">Search</string>
    <string name="nearby">Nearby</string>
    <string name="search_title">Search</string>
    <string name="add">Add</string>
    <string name="search_hint">Look for POI</string>
    <string name="title_activity_details">Details Of POI</string>
    <string name="title_activity_add">Add New POI</string>
    <string name="title_activity_select">Select coordinates</string>
    <string name="pref_contribute">Be a contributor</string>
    <string name="pref_contribute_summ">Receive prompts when nearby pending locations to confirm their existence</string>
</resources>
