<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/add_action"
        android:title="@string/add"
        android:icon="@drawable/ic_action_new"
        app:showAsAction="always" />
    <item android:id="@+id/nearby_action"
        android:title="@string/nearby"
        android:icon="@drawable/ic_action_place"
        app:showAsAction="always" />
    <item android:id="@+id/search_action"
        android:title="@string/search"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="always" />
    <item android:id="@+id/action_sync"
        android:title="@string/action_sync"
        app:showAsAction="never" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
